# keepie_server

./: README.md
keepie_server/: pyproject.toml
keepie_server/keepie_server/app_layer/: configure_server.py  data_processor.py  fast_api.py  keepie-cb5ec-firebase-adminsdk-u5fis-b995b43031.json  modules_runner.py
keepie_server/keepie_server/db/: app_firebase_connector.py  mydb.py
keepie_server/keepie_server/logic/: api_handler.py  app_db_connector.py
keepie_server/keepie_server/my_tools/: my_jsons_api.py
